# RustLr_4

client/: package-lock.json  package.json  tsconfig.json
client/src/app/: layout.tsx  page.tsx  styles.module.scss
client/src/app/chat/: page.tsx
client/src/components/chat/: chat.module.scss  chat.tsx
client/src/components/header/: header.module.scss  header.tsx
client/src/services/: auth.service.ts
server/: .env  Cargo.toml  diesel.toml
server/migrations/2024-12-26-224125_users_chat_message/: down.sql  up.sql
server/src/: handlers.rs  main.rs  models.rs  services.rs
