[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
dotenv = "0.15.0"
rand_core = "0.6.4"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.216"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
rocket_cors = "0.6.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
futures-util = "0.3.31"
rocket_ws = "0.1.1"
env_logger = "0.11.6"
log = "0.4.22"
ws = "0.9.2"
